Fix align of tags

--- a/style/stylesheets/betterttv.css
+++ b/style/stylesheets/betterttv.css
@@ -164,7 +164,7 @@ input.text:focus,select:focus,textarea:focus {
 
 .ember-chat .badges {
     display: inline-block;
-    padding-right: 5px;
+    margin-right: 5px;
 }
 
 .ember-chat .badges .badge {
